--- a/CJL vue/.vscode/extensions.json
+++ b/CJL vue/.vscode/extensions.json
@@ -1,7 +1,7 @@
 {
   "recommendations": [
     "Vue.volar",
-    "ms-playwright.playwright",
+    "vitest.explorer",
     "dbaeumer.vscode-eslint",
     "EditorConfig.EditorConfig",
     "esbenp.prettier-vscode"
