--- a/CJLVue/package.json
+++ b/CJLVue/package.json
@@ -38,6 +38,7 @@
     "npm-run-all2": "^8.0.4",
     "prettier": "3.5.3",
     "pug": "^3.0.3",
+    "rollup": "^4.9.0",
     "typescript": "~5.8.0",
     "vite": "^5.0.12",
     "vite-plugin-vue-devtools": "^7.7.7",
