--- a/CJL-BackEnd/CJL/src/main/resources/application-prod.properties
+++ b/CJL-BackEnd/CJL/src/main/resources/application-prod.properties
@@ -8,7 +8,7 @@ spring.datasource.password=MgOoCDIxn6GkOwnAbbCDsKfxSF5crxDw
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# H2 console desabilitado (produção)
+# H2 console desabilitado
 spring.h2.console.enabled=false
 
 # JPA
