--- a/CJLVue/package.json
+++ b/CJLVue/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
-    "preview": "vite preview",
-    "start": "vite preview --host 0.0.0.0 --port $PORT",
+    "build": "run-p type-check \"build-only {@}\" --mode prod",
+    "preview": "vite preview --mode prod",
+    "start": "vite preview --host 0.0.0.0 --port $PORT --mode prod",
     "test:unit": "vitest",
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
