--- a/CJLVue/package.json
+++ b/CJLVue/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --mode prod",
+    "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview --mode prod",
     "start": "vite preview --host 0.0.0.0 --port $PORT --mode prod",
     "test:unit": "vitest",
