--- a/CJL-BackEnd/CJL/src/main/resources/application.properties
+++ b/CJL-BackEnd/CJL/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.h2.console.path=/h2-console
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+logging.level.org.springframework.security=DEBUG
+
