--- a/CJL-BackEnd/CJL/src/main/resources/application.properties
+++ b/CJL-BackEnd/CJL/src/main/resources/application.properties
@@ -16,3 +16,23 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.springframework.security=DEBUG
+
+
+
+server.servlet.context-path=/convivium
+server.url=http://localhost:8080/convivium
+
+app.upload.dir=uploads
+spring.mail.host=smtp.maileroo.com
+spring.mail.port=587
+spring.mail.username=no-reply@cjlconsultoria.com
+spring.mail.password=daae2bca0e9e5b086cfe4df9
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.from=no-reply@cjlconsultoria.com
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.cache=false
