--- a/CJL-BackEnd/CJL/src/main/resources/application.properties
+++ b/CJL-BackEnd/CJL/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=CJL
 server.port=8080
 
-
+url.front=https://localhost:5173
 
 spring.datasource.url=jdbc:h2:mem:cjl-db
 spring.datasource.driverClassName=org.h2.Driver
@@ -17,8 +17,6 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.springframework.security=DEBUG
-
-
 
 server.servlet.context-path=/convivium
 server.url=http://localhost:8080/convivium
